hphp/hack/test/typecheck/void_usage_2.php.exp
File "void_usage_2.php", line 12, characters 7-21:
You cannot return a value (Typing[4084])
File "", line 0, characters 0-0:
This is a void function
